--- a/a/am/amm/ammoseek.com.html
+++ b/a/am/amm/ammoseek.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the ammoseek.com privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121003226id_/http%3A//ammoseek.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ammoseek.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606010151id_/http%3A//ammoseek.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US"><head>
 <title>Ammoseek.com Privacy Policy</title>
-<script async="" src="//connect.facebook.net/en_US/fp.js"></script><script type="text/javascript" src="/as.js"></script>
+<script type="text/javascript" async="" src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js"></script><script type="text/javascript" src="/as.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Ammoseek.com Privacy Policy AmmoSeek.com Find in-stock ammunition at the lowest prices fast">
@@ -20,6 +20,7 @@
 <link media="screen" type="text/css" rel="stylesheet" href="/style.css">
 <link media="screen" type="text/css" rel="stylesheet" href="/switch.css">
 <link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all">
+<link rel="stylesheet" href="rateyo.min.css">
 <script src="/jquery/jquery-1.8.2.min.js"></script>
 <script src="/jquery/jquery-scrollbox-master/jquery.scrollbox.js"></script>
 <script src="/jquery/jquery.inputsearch.min.js"></script>
@@ -117,20 +118,10 @@ else { dd.style.display = "none"; }
 </script>
 
 
-<script type="text/javascript">
-var fb_param = {};
-fb_param.pixel_id = '6010132358682';
-fb_param.value = '0.00';
-fb_param.currency = 'USD';
-(function(){
-  var fpw = document.createElement('script');
-  fpw.async = true;
-  fpw.src = '//connect.facebook.net/en_US/fp.js';
-  var ref = document.getElementsByTagName('script')[0];
-  ref.parentNode.insertBefore(fpw, ref);
-})();
-</script>
-<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/offsite_event.php?id=6010132358682&amp;value=0&amp;currency=USD (https://www.facebook.com/offsite_event.php?id=6010132358682&value=0&currency=USD)" /></noscript>
+<!-- start Mixpanel --><script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
+0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
+mixpanel.init("f386b5153770b3aa129457822b620762");</script><!-- end Mixpanel -->
    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script></head>
 
 <body><div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" style="padding-bottom: 42px; padding-right: 42px; display: none;"><div id="cboxWrapper" style=""><div style=""><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxLoadedContent" class="" style="width: 0px; height: 0px; overflow: hidden;"></div><div id="cboxLoadingOverlay" class="" style=""></div><div id="cboxLoadingGraphic" class="" style=""></div><div id="cboxTitle" class="" style=""></div><div id="cboxCurrent" class="" style=""></div><div id="cboxNext" class="" style=""></div><div id="cboxPrevious" class="" style=""></div><div id="cboxSlideshow" class="" style=""></div><div id="cboxClose" class="" style=""></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div>
@@ -144,7 +135,7 @@ fb_param.currency = 'USD';
 </p><table class="main" width="100%"><tbody><tr><th class="top" colspan="5"></th></tr><tr><th class="side"></th>
 <td class="main" valign="top" align="left">
 <center>
-<span style="font-size:11px"><a class="hl" href="/">Find Ammo</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" target="_blank" href="http://help.ammoseek.com/">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/about.html">About AmmoSeek</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/contact/">Contact&nbsp;Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/store/">Store</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/acr.html">Certified Retailers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/advertising.html">Advertise</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/faq.html">FAQ</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/friends.html">Friends</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/deals/">Deals&nbsp;&amp;&nbsp;Coupons</a></span></center>
+<span style="font-size:11px"><a class="hl" href="/">Find Ammo</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" target="_blank" href="http://help.ammoseek.com/">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/about.html">About AmmoSeek</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/contact/">Contact&nbsp;Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/store/">Store</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/acr.html">Certified Retailers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/advertising.html">Advertise</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/faq.html">FAQ</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/friends.html">Friends</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/?ratings=x">Retailer Reviews</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/deals/">Deals&nbsp;&amp;&nbsp;Coupons</a></span></center>
 
 <center><h2>AmmoSeek Privacy Policy</h2></center>
 
@@ -165,7 +156,7 @@ We may share information with governmental agencies or other companies assisting
 Your personally identifiable information is kept secure. Only authorized employees, agents and contractors (who have agreed to keep information secure and confidential) have access to this information. All emails and newsletters from this site allow you to opt out of further mailings.</p>
 
 <p><strong>Privacy Contact Information</strong><br>
-If you have any questions, concerns, or comments about our privacy policy please <a class="hl" href="http://ammoseek.com/contact/">contact us using this form</a> or via telephone number: 615-AMMO-4U-4.
+If you have any questions, concerns, or comments about our privacy policy please <a class="hl" href="http://ammoseek.com/contact/">contact us using this form</a> or via telephone number: 615-AMMO-4U-4.  Please do not use this number for customer service, billing, or any other inquries.  Please  <a class="hl" href="http://ammoseek.com/contact/">contact us</a> though our web site.  Thanks.
 
 </p><p>We reserve the right to make changes to this policy. Any changes to this policy will be posted.</p>
 <br><br>
@@ -174,10 +165,10 @@ If you have any questions, concerns, or comments about our privacy policy please
 </tbody></table>
 <center>
 <span class="i10">
-<span style="font-size:11px"><a class="hl" href="/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" target="_blank" href="http://help.ammoseek.com/">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/about.html">About</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/contact/">Contact&nbsp;Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/store/">Store</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/acr.html">Certified Retailers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/advertising.html">Advertise</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/faq.html">FAQ</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/friends.html">Friends</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/sitemap.html">SiteMap</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/privacy.html">Privacy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/tos.html">TOS</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/deals/">Deals&nbsp;&amp;&nbsp;Coupons</a></span></span>
+<span style="font-size:11px"><a class="hl" href="/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" target="_blank" href="http://help.ammoseek.com/">Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/about.html">About</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/contact/">Contact&nbsp;Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/store/">Store</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/acr.html">Certified Retailers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/advertising.html">Advertise</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/faq.html">FAQ</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/friends.html">Friends</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/?ratings=x">Retailer Reviews</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/sitemap.html">SiteMap</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/privacy.html">Privacy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/tos.html">TOS</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="hl" href="/deals/">Deals&nbsp;&amp;&nbsp;Coupons</a></span></span>
 <br><span class="i10">
-© 2009-2016, AmmoSeek, LLC</span>
-&nbsp;&nbsp;|&nbsp;&nbsp;<span class="i10">Last updated on Fri Sep 16 17:20:25 2016</span>
+© 2009-2017, AmmoSeek, LLC</span>
+&nbsp;&nbsp;|&nbsp;&nbsp;<span class="i10">Last updated on Wed May 10 12:39:28 2017</span>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-5694615-9']);
