--- a/u/ur/url/urlm.co.uk.html
+++ b/u/ur/url/urlm.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the urlm.co.uk privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119221553id_/http%3A//urlm.co.uk/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the urlm.co.uk privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606010154id_/http%3A//urlm.co.uk/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -29,7 +29,7 @@
 
 
 
-At urlmetrics.co.uk, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by urlmetrics.co.uk and how it is used. 
+At urlm.co.uk, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by urlm.co.uk and how it is used. 
 
 
 
@@ -45,7 +45,7 @@ LOG FILES
 
 
 
-Like many other Web sites, urlmetrics.co.uk makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user's movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. 
+Like many other Web sites, urlm.co.uk makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user's movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. 
 
 
 
@@ -61,7 +61,7 @@ COOKIES AND WEB BEACONS
 
 
 
-urlmetrics.co.uk does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. 
+urlm.co.uk does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. 
 
 
 
@@ -81,11 +81,11 @@ DoubleClick DART Cookie
 
 
 
-(i) Google, as a third party vendor, uses cookies to serve ads on urlmetrics.co.uk.
+(i) Google, as a third party vendor, uses cookies to serve ads on urlm.co.uk.
 
 
 
-(ii) Google's use of the DART cookie enables it to serve ads to users based on their visit to urlmetrics.co.uk and other sites on the Internet.
+(ii) Google's use of the DART cookie enables it to serve ads to users based on their visit to urlm.co.uk and other sites on the Internet.
 
 
 
@@ -117,7 +117,7 @@ Some of our advertising partners may use cookies and web beacons on our site. Ou
 
 
 
-These third-party ad servers or ad networks use technology to the advertisements and links that appear on urlmetrics.co.uk send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see.
+These third-party ad servers or ad networks use technology to the advertisements and links that appear on urlm.co.uk send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see.
 
 
 
@@ -129,7 +129,7 @@ These third-party ad servers or ad networks use technology to the advertisements
 
 
 
-urlmetrics.co.uk has no access to or control over these cookies that are used by third-party advertisers.
+urlm.co.uk has no access to or control over these cookies that are used by third-party advertisers.
 
 
 
@@ -141,7 +141,7 @@ urlmetrics.co.uk has no access to or control over these cookies that are used by
 
 
 
-You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. urlmetrics.co.uk's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.
+You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. urlm.co.uk's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.
 
 
 
@@ -227,7 +227,7 @@ If you wish to disable cookies, you may do so through your individual browser op
 					<ul>
 <li><a href="http://www.facebook.com/pages/URLmetrics/568017816546745?">Facebook</a></li>
 <li><a href="https://twitter.com/URLmetrics">Twitter</a></li>						
-                        <li>© 2011 - 2016</li>
+                        <li>© 2011 - 2017</li>
 					</ul>
 			</div>
 			</div>
