--- a/s/sc/sca/scanwith.com.html
+++ b/s/sc/sca/scanwith.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scanwith.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119052131id_/http%3A//www.scanwith.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scanwith.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606010550id_/http%3A//www.scanwith.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
       <base href="http://www.scanwith.com/">
@@ -91,9 +91,9 @@
 <!-- End BuySellAds Zone Code -->
 <div class="adchoiceBanner">
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 728x15, created 7/29/08 -->
-<ins class="adsbygoogle" style="display:inline-block;width:728px;height:15px" data-ad-client="ca-pub-7595495923317249" data-ad-slot="5690301919"></ins>
-     <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+<!-- ScanWith TextLinks responsive 728 -->
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7595495923317249" data-ad-slot="4434557204" data-ad-format="link"></ins>
+<script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
 </div>
 		</div>
 	<div class="column">
@@ -212,14 +212,14 @@
                     	<div id="virusDef">
                         <h3 class="virus-definitions"><img src="/images/xh3-virus-def.png.pagespeed.ic.0aVfpBeo7Q.png" alt="Virus Definitions">Virus Definitions</h3>
                         <ul class="virus-definitions">
-                                                            <li><a href="download/avast_Virus_Definitions.htm" title="avast! Virus Definitions VPS November 16, 2016">avast! Virus Definitions</a></li>
-                                                        <li><a href="download/Avira_Antivir_Virus_Definition_File_Update.htm" title="Avira Antivirus Virus Definition File Update November 16, 2016">Avira Antivirus Update</a></li>
-                                                        <li><a href="download/AVG_Anti-Virus_Updates.htm" title="AVG Anti-Virus Updates November 16, 2016">AVG Anti-Virus Updates</a></li>
-                                                        <li><a href="download/Trend_Micro_Pattern_File_for_Windows.htm" title="Trend Micro Pattern File for Windows 12.901.00">Trend Micro Pattern File</a></li>
-                                                        <li><a href="download/McAfee_SuperDAT_Update.htm" title="McAfee SuperDAT Update 8351">McAfee SuperDAT</a></li>
-                                                        <li><a href="download/Norton_AntiVirus_Definitions.htm" title="Norton AntiVirus Definitions November 16, 2016">Norton Definitions</a></li>
-                                                        <li><a href="download/ESET_NOD32_Antivirus_Offline_Updates.htm" title="ESET NOD32 Antivirus Offline Updates 14455 16.11.2016">NOD32 Antivirus Updates</a></li>
-                                                        <li><a href="download/F-Secure_Virus_Definitions.htm" title="F-Secure Virus Definitions November, 2016">F-Secure Definitions</a></li>
+                                                            <li><a href="download/avast_Virus_Definitions.htm" title="avast! Virus Definitions VPS June 6, 2017">avast! Virus Definitions</a></li>
+                                                        <li><a href="download/Avira_Antivir_Virus_Definition_File_Update.htm" title="Avira Antivirus Virus Definition File Update June 6, 2017">Avira Antivirus Update</a></li>
+                                                        <li><a href="download/AVG_Anti-Virus_Updates.htm" title="AVG Anti-Virus Updates June 5, 2017">AVG Anti-Virus Updates</a></li>
+                                                        <li><a href="download/Trend_Micro_Pattern_File_for_Windows.htm" title="Trend Micro Pattern File for Windows 13.451.00">Trend Micro Pattern File</a></li>
+                                                        <li><a href="download/McAfee_SuperDAT_Update.htm" title="McAfee SuperDAT Update 8551">McAfee SuperDAT</a></li>
+                                                        <li><a href="download/Norton_AntiVirus_Definitions.htm" title="Norton AntiVirus Definitions June 05, 2017">Norton Definitions</a></li>
+                                                        <li><a href="download/ESET_NOD32_Antivirus_Offline_Updates.htm" title="ESET NOD32 Antivirus Offline Updates 15534 5.06.2017">NOD32 Antivirus Updates</a></li>
+                                                        <li><a href="download/F-Secure_Virus_Definitions.htm" title="F-Secure Virus Definitions June, 2017">F-Secure Definitions</a></li>
                                                         <li><a href="download/Trojan_Remover_Database_Update.htm" title="Trojan Remover Database Update 8549">Trojan Remover Update</a></li>
                                                         <li><a href="download/Kaspersky_Anti-Virus_Update.htm" title="Kaspersky Antivirus Updates 1 April, 2014">Kaspersky Updates</a></li>
                                                         <li><a href="download/Ad-aware_Reference_File_SE.htm" title="Ad-Aware Definition File 28.05.2012">Ad-Aware Definition File</a></li>
@@ -238,26 +238,26 @@
                                                 <div class="box taupe-box">
                             <h3 class="top-downloads"><img src="/images/xh3-top-downloads.gif.pagespeed.ic.qIEDcXPFdJ.png" alt="Top Downloads">Top Downloads</h3>
                             <ul class="top-downloads">
-                                                                    <li><a href="download/ESET_NOD32_Antivirus_Offline_Updates.htm" title="ESET NOD32 Antivirus Offline Updates 14455 16.11.2016">NOD32 Antivirus Updates</a></li>
-                                    <li><a href="download/McAfee_SuperDAT_Update.htm" title="McAfee SuperDAT Update 8351">McAfee SuperDAT</a></li>
-                                    <li><a href="download/Kaspersky_Anti-Virus.htm" title="Kaspersky Anti-Virus 2017 17.0.0.611">Kaspersky Anti-Virus</a></li>
-                                    <li><a href="download/NOD32.htm" title="NOD32 Antivirus 10.0.106.0 Beta">NOD32 Antivirus</a></li>
-                                    <li><a href="download/AVG_Anti-Virus_Updates.htm" title="AVG Anti-Virus Updates November 16, 2016">AVG Anti-Virus Updates</a></li>
-                                    <li><a href="download/Norton_AntiVirus.htm" title="Norton AntiVirus 2016 22.7.1.32">Norton AntiVirus</a></li>
-                                    <li><a href="download/AVG_Free_Edition.htm" title="AVG Anti-Virus Free 2016 16.121.7859">AVG Free Ed. 2016</a></li>
+                                                                    <li><a href="download/ESET_NOD32_Antivirus_Offline_Updates.htm" title="ESET NOD32 Antivirus Offline Updates 15534 5.06.2017">NOD32 Antivirus Updates</a></li>
+                                    <li><a href="download/McAfee_SuperDAT_Update.htm" title="McAfee SuperDAT Update 8551">McAfee SuperDAT</a></li>
+                                    <li><a href="download/Kaspersky_Anti-Virus.htm" title="Kaspersky Anti-Virus 2018 18.0.0.405 Final">Kaspersky Anti-Virus</a></li>
+                                    <li><a href="download/NOD32.htm" title="NOD32 Antivirus 10.1.204 Final">NOD32 Antivirus</a></li>
+                                    <li><a href="download/AVG_Anti-Virus_Updates.htm" title="AVG Anti-Virus Updates June 5, 2017">AVG Anti-Virus Updates</a></li>
+                                    <li><a href="download/Norton_AntiVirus.htm" title="Norton AntiVirus 2017 22.9.0.71 Final">Norton AntiVirus</a></li>
+                                    <li><a href="download/AVG_Free_Edition.htm" title="AVG Anti-Virus Free 2017 17.3.3011">AVG Free Ed. 2017</a></li>
                                     <li><a href="download/Kaspersky_Anti-Virus_Update.htm" title="Kaspersky Antivirus Updates 1 April, 2014">Kaspersky Updates</a></li>
-                                    <li><a href="download/Norton_AntiVirus_Definitions.htm" title="Norton AntiVirus Definitions November 16, 2016">Norton Definitions</a></li>
+                                    <li><a href="download/Norton_AntiVirus_Definitions.htm" title="Norton AntiVirus Definitions June 05, 2017">Norton Definitions</a></li>
                                     <li><a href="download/avast_Home_Edition.htm" title="avast! Free Antivirus 2016 12.3.3154.0">avast! Free Antivirus</a></li>
-                                    <li><a href="download/CCleaner.htm" title="CCleaner 5.24.5841">CCleaner</a></li>
+                                    <li><a href="download/CCleaner.htm" title="CCleaner 5.30.6065">CCleaner</a></li>
                                     <li><a href="download/Trojan_Remover.htm" title="Trojan Remover 6.9.4.2947">Trojan Remover</a></li>
                                     <li><a href="download/Unlocker.htm" title="Unlocker 1.9.2">Unlocker 1.9.2</a></li>
-                                    <li><a href="download/AntiVir_Personal_Edition.htm" title="Avira Free Antivirus 2016 15.0.22.54">Avira Free Antivirus</a></li>
+                                    <li><a href="download/AntiVir_Personal_Edition.htm" title="Avira Free Antivirus 2017 15.0.25.171">Avira Free Antivirus</a></li>
                                     <li><a href="download/Kaspersky_Internet_Security.htm" title="Kaspersky Internet Security 2017 17.0.0.611">Kaspersky Internet Security</a></li>
-                                    <li><a href="download/Hotspot_Shield.htm" title="Hotspot Shield Free 6.0.4">Hotspot Shield</a></li>
+                                    <li><a href="download/Hotspot_Shield.htm" title="Hotspot Shield Free 6.8.8">Hotspot Shield</a></li>
+                                    <li><a href="download/Avira_Antivir_Virus_Definition_File_Update.htm" title="Avira Antivirus Virus Definition File Update June 6, 2017">Avira Antivirus Update</a></li>
                                     <li><a href="download/Hotspot_Shield_VPN.htm" title="Hotspot Shield VPN for Android 4.0.5">Hotspot Shield VPN</a></li>
-                                    <li><a href="download/Avira_Antivir_Virus_Definition_File_Update.htm" title="Avira Antivirus Virus Definition File Update November 16, 2016">Avira Antivirus Update</a></li>
-                                    <li><a href="download/Folder_Lock.htm" title="Folder Lock 7.6.3">Folder Lock</a></li>
-                                    <li><a href="download/Kaspersky_Virus_Removal_Tool.htm" title="Kaspersky Virus Removal Tool 2015 15.0.19.0 (14.11.2016)">Kaspersky Virus Removal</a></li>
+                                    <li><a href="download/Folder_Lock.htm" title="Folder Lock 7.6.9">Folder Lock</a></li>
+                                    <li><a href="download/Kaspersky_Virus_Removal_Tool.htm" title="Kaspersky Virus Removal Tool 2017 15.0.19.0 (31.05.2017)">Kaspersky Virus Removal</a></li>
                             </ul>
                             <a href="./top25_allthetime.htm" class="more" title="Most Downloaded Software">MORE SOFTWARE</a>
                         </div>
