--- a/f/fr/fre/freeproxy.net.html
+++ b/f/fr/fre/freeproxy.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeproxy.net privacy policy that was archived on 2016-02-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160201184044id_/http%3A//www.freeproxy.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeproxy.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606010846id_/http%3A//freeproxy.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head><meta charset="UTF-8">
 <title>Free Proxy</title>
