--- a/e/eb/ebr/ebrandz.com.html
+++ b/e/eb/ebr/ebrandz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ebrandz.com privacy policy that was archived on 2016-11-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161129172800id_/http%3A//www.ebrandz.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ebrandz.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606010918id_/http%3A//www.ebrandz.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" charset="utf-8" src="//v2.zopim.com/?DYYMKwUjQ2d2KB1fOmytAjQkUtDGHMYX" type="text/javascript"></script><script type="text/javascript" src="http://forms.edeveloperz.com/geoip-api/country_redirect_1.php?site_country=US"></script>
@@ -49,7 +49,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 <!--End of Zopim Live Chat Script-->
 
 
-<!-- Google Code start -->
+<!-- Google Analytical codes ends 12-may-2017  -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -59,8 +59,8 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
   ga('create', 'UA-1170602-1', 'auto');
   ga('send', 'pageview');
 
-</script>	
-<!--End of Google Code -->
+</script>
+<!-- Google Analytical codes new ends 12-may-2017  -->
 
 
 <!-- Call tracking start  -->
