--- a/a/al/alw/alwaysastrology.com.html
+++ b/a/al/alw/alwaysastrology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alwaysastrology.com privacy policy that was archived on 2016-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161228151456id_/http%3A//www.alwaysastrology.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alwaysastrology.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606011007id_/http%3A//www.alwaysastrology.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head> <title>Privacy Policy</title>
 
@@ -355,15 +355,17 @@ policy.</p>
 
         <!-- start: SSI alwaysastrology-footer.shtml --><!--
 --><p style="text-align:center;"><b>Thank you for visiting with us today.</b></p> 
-<p style="text-align:center;"><b>Copyright © 2008-2016 AlwaysAstrology.com - All rights reserved.</b></p> 
+<p style="text-align:center;"><b>Copyright © 2008-2017 AlwaysAstrology.com - All rights reserved.</b></p> 
 <p style="text-align:center;"><i>Graphics courtesy of Crystal Cloud Graphics &amp; Amazing Animations</i> </p>
 <!--
 --><!-- end: SSI alwaysastrology-footer.shtml -->
 
       </div><!-- end Liner -->
     </div><!-- end Footer -->
-</div> <!-- start: tool_blocks.sbi_html_body_end --><!-- end: tool_blocks.sbi_html_body_end -->
-<!-- Generated at 14:45:49 12-Dec-2016 -->
+</div> <!-- start: tool_blocks.sbi_html_body_end --><style>.g-recaptcha{display:inline-block}.recaptcha_wrapper{text-align:center}</style>
+	    <script>var recaptcha_callbackings=recaptcha_callbackings;if(recaptcha_callbackings){var recaptcha_callback=function(){for(i=0;i<recaptcha_callbackings.length;i++){recaptcha_callbackings[i]();}};var script=document.createElement('script');script.type='text/javascript';script.async=true;script.defer=true;script.src='https://www.google.com/recaptcha/api.js?onload=recaptcha_callback&render=explicit';document.getElementsByTagName('head')[0].appendChild(script);}</script>
+  <!-- end: tool_blocks.sbi_html_body_end -->
+<!-- Generated at 23:46:25 04-Jun-2017 -->
 
 
 
